# code-migrator

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
src/core/: __init__.py  migrator.py  state.py
src/filters/: __init__.py  patterns.py
src/utils/: __init__.py  hashing.py  progress.py
